# endstone-inventoryui

./: README.md  pyproject.toml
example/: pyproject.toml
example/src/endstone_inventoryui_example/: __init__.py  main.py
src/endstone_inventoryui/: __init__.py  listener.py  main.py
src/endstone_inventoryui/manager/: player_manager.py  session.py
src/endstone_inventoryui/menu/: inventory.py  menu.py  menu_type.py
src/endstone_inventoryui/menu/graphic/: block_graphic.py  block_pair_graphic.py
src/endstone_inventoryui/network/: inventory_content_packet.py  inventory_slot_packet.py  item_stack_wrapper.py
src/endstone_inventoryui/util/: item_utils.py  utils.py
